fixed spacing of "Register..." sentence and centered text on registration page

--- a/static/sass/_isc.scss
+++ b/static/sass/_isc.scss
@@ -221,6 +221,8 @@ body.view-register {
 				font-size: 20px;
 				font-weight: bold;
 				margin-left: 40px;
+				margin-top: 13px;
+				text-align: center;
 				text-transform: none;
 				color: #000000;
 			}
